# paper-motor-intention

./: .copier-answers.yml  .gitignore  .pytask.sqlite3  LICENSE  README.md  env.yml  env_dev.yml  noxfile.py  pyproject.toml  requirements.txt
docs/: conf.py  index.md
granger_causality/: README.md
granger_causality/coherence/: coh_connectivity.py  coh_connectivity_processing.py  coh_connectivity_processing_methods.py  coh_exceptions.py  coh_handle_entries.py  coh_handle_files.py  coh_loading.py
granger_causality/processing/: data_processing_granger_causality_preset.py  data_processing_granger_causality_preset_hpc.py  data_processing_granger_causality_single.py  epochs_to_signal.py  run_gc.sh
granger_causality/settings/: con_granger_richard.json
granger_causality/settings/Data File Presets/: Richard_MedOffOn_Unpaired.json  Richard_StimOffOn_Unpaired.json
matlab/: GC_med_ON_permTest.m  GC_stim_ON_permTest.m
src/motor_intention/: __init__.py  plotting_settings.py  project_constants.py  stats_helpers.py  task_00_write_trial_numbers.py  task_01_features.py  task_02_decode.py  task_03_accuracies.py  task_04_decoding_times.py  task_05_time_frequency.py  task_06_readiness_potential_ecog.py  task_07_readiness_potential_stn.py  task_10_updrs_boxplot_medoffvson.py  task_11_updrs_boxplot_stimoffvson.py  task_12_plot_raw_ecog.py  task_13_plot_raw_stn.py  task_14_plot_raw_emg.py  task_15_time_frequency_colorplot.py  task_16_readiness_potential_lineplot.py  task_30_plot_features.py  task_31_prediction_lineplot_medoff_medon_stimon_intention.py  task_32_decoding_times_boxplot_medoff_medon_stimon_ecog.py  task_32_decoding_times_boxplot_medoff_medon_stimon_intention.py  task_33_ecog_3D_plot_decodingtimes.py  task_70_supp_accuracies_boxplot_medoff_medon_stimon_ecog.py  task_70_supp_accuracies_boxplot_medoff_medon_stimon_ecog_intention.py  task_71_supp_accuracies_boxplot_medoff_medon_stimon_lfp.py  task_71_supp_accuracies_boxplot_medoff_medon_stimon_lfp_intention.py  task_72_supp_accuracies_boxplot_stimoffvson.py  task_73_supp_accuracies_boxplot_medoffvson.py  task_74_supp_accuracies_boxplot_ecogvslfp_intention.py  task_80_supp_decoding_times_boxplot_medoffvson.py  task_81_supp_decoding_times_boxplot_stimoffvson.py  task_81_supp_decoding_times_boxplot_stimoffvson_old.py  task_82_supp_decoding_times_boxplot_medoff_medon_stimon_lfp.py  task_82_supp_decoding_times_boxplot_medoff_medon_stimon_lfp_intention.py  task_83_supp_decoding_times_boxplot_ecogvslfp.py  task_83_supp_decodingtimes_boxplot_ecogvslfp_intention.py  task_84_supp_correlationplot_performance_decodingtime_stim.py  task_85_supp_ecog_3D_plot_singlecolor.py  (+4 more)
tests/: test_package.py
