[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Richard M. Köhler", email = "koehler.richard@charite.de"},
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
  "mne>=1.0",
  "mne-qt-browser",
  "psutil",
  "pte",
  "pte-decode",
  "pte-stats==0.3.0",
  "py_neuromodulation",
  "pyqt5",
  "pyvistaqt",
  "qdarkstyle",
  "rtree",
  "trimesh",
  "pluggy>=1.3",
  "pytask>=0.4",
]
description = "Code used for investigation of motor intention in Parkinson's disease patients."
dynamic = ["version"]
name = "motor-intention"
readme = "README.md"
requires-python = ">=3.10.9,<3.10.10"

[project.optional-dependencies]
dev = [
  "black",
  "mypy",
  "packaging",
  "pandas-stubs",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "ruff",
]

[project.urls]
"Bug Tracker" = "https://github.com/richardkoehler/paper-motor-intention/issues"
Changelog = "https://github.com/richardkoehler/paper-motor-intention/releases"
Discussions = "https://github.com/richardkoehler/paper-motor-intention/discussions"
Homepage = "https://github.com/richardkoehler/paper-motor-intention"

[tool.hatch]
version.path = "src/motor_intention/__init__.py"

[tool.pytest.ini_options]
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
filterwarnings = [
  "error",
]
log_cli_level = "INFO"
minversion = "6.0"
testpaths = [
  "tests",
]
xfail_strict = true

[tool.mypy]
files = ["src", "tests"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "motor_intention.*"

[tool.black]
line-length = 79
extend-exclude = ["matlab", "granger_causality"]

[tool.ruff]
line-length = 79
extend-exclude = ["matlab", "granger_causality"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**" = ["T20"]

